--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/favicon-16x16.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
@@ -54,11 +54,9 @@
           <li><a class="nav-link active" href="#header">Home</a></li>
           <li><a class="nav-link" href="#about">Présentation</a></li>
           <li><a class="nav-link" href="#resume">Expérience</a></li>
-          <li><a class="nav-link"
-              href="https://drive.google.com/file/d/1U0gdfCy8UxQWZptwYMUUeOeud1IH3w-j/view?usp=sharing">CV</a></li>
-
-          
+          <li><a class="nav-link" target="_blank" href="https://drive.google.com/file/d/1U0gdfCy8UxQWZptwYMUUeOeud1IH3w-j/view?usp=sharing">CV</a></li>
           <li><a class="nav-link" href="#portfolio">Portfolio</a></li>
+          <li><a class="nav-link" href="mailto:florent.odet@gmail.com">Me Contacter</a></li>
           
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -347,7 +345,7 @@
         <div class="col-lg-6">
 
 
-          <h3 class="resume-title">Diplome et formation</h3>
+          <h3 class="resume-title">Diplômes et Formations</h3>
 
 
 
